# aptos-2023-seoul

./: .gitignore  README.md
game-server-node/: README.md
game-server-node/backend/: package-lock.json  package.json
game-server-node/backend/client_examples/SignInAptos_C#/: Program.cs
game-server-node/backend/src/: aptos.js
graphql/: README.md
graphql/CSharp/: CSharp.csproj  GraphQLTokenResponse.cs  Program.cs  README.md
graphql/JavaScript/: README.md  getCurrentTokenOwnership.js  getCurrentTokenOwnership_by_collection.js  package-lock.json  package.json
graphql/TypeScript/: README.md  package-lock.json  package.json
graphql/TypeScript/src/: getCurrentTokenOwnership.ts  getCurrentTokenOwnership_by_collection.ts
nft/: README.md  cannedbi_coin.ts  common.ts  get_badges.ts  get_cannedbi.ts  get_proofs.ts  mint_badges.ts  mint_cannedbi.ts  mint_game_proofs.ts  mutate_cannedbi.ts  package.json  pnpm-lock.yaml  simple_nft2.ts  test_cannedbi.ts  tsconfig.json  wallet_client.ts
nft/move/: .gitignore  Move.toml  README.md
nft/move/deploy/: Cargo.toml
nft/move/deploy/src/: main.rs
nft/move/docs/: siwa.puml
nft/move/sources/: cannedbi_badge.move  cannedbi_game_proof.move  cannedbi_item.move  cannedbi_marketplace.move  cannedbi_nft.move  cannedbi_shop.move  coin.move  coin_defi.move
nft/move2/: Move.toml
nft/move2/sources/: cannedbi_nft.move  cannedbi_test.move
nft/resources/badges/: README.md
service/: Cargo.toml
store-directory/: README.md  package-lock.json  storeDirectory.mjs
text-client/: Cargo.toml
unity3d/AptosSDK/Src/: CoinClient.cs  TokenClient.cs
unity3d/AptosSDK/Src/Client/: Client.cs
unity3d/AptosSDK/Src/Client/Services/: AccountsService.cs  BaseService.cs  EventsService.cs
unity3d/AptosSDK/Src/Constants/: FunctionTypes.cs
unity3d/AptosSDK/Src/DTO/RequestsPayloads/: Event.cs  TokenDataId.cs
unity3d/AptosSDK/Src/DTO/RequestsPayloads/MoveResource/: MoveResource.cs
unity3d/AptosSDK/Src/DTO/ResponsePayloads/: CollectionPayload.cs  TokenEvent.cs
unity3d/AptosSDK/Src/Utils/: WebHelper.cs
unity3d/snippets/: badge.cs  const.cs
