[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = { version = "0.13.0"}
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-web = { version = "4.2.1"}
actix-web-actors = "4.1.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

# actix.workspace = true
# actix-broker.workspace = true
# actix-files.workspace = true
# actix-web.workspace = true
# actix-web-actors.workspace = true

# env_logger.workspace = true
# log.workspace = true
# rand.workspace = true